1. Removed PBSmapping code 2. Added an entirely new M-step which does NOT assume that Omega is diagonal and is more efficient in other cases 3. Changed the default binning to assume that all point referenced data in a BAU are correlated (averge variance is taken) 4. Removed alpha_OLS 5. Updated vignette

--- a/vignettes/FRK_bib.bib
+++ b/vignettes/FRK_bib.bib
@@ -7,6 +7,13 @@
   year={2006}
 }
 
+@Manual{LatticeKrig,
+    title = {{LatticeKrig: Multiresolution Kriging Based on Markov Random Fields}},
+    author = {Douglas Nychka and Dorit Hammerling and Stephan Sain and Nathan Lenssen},
+    year = {2015},
+    note = {R package version 5.4-1},
+    url = {http://CRAN.R-project.org/package=LatticeKrig},
+  }
 @article{Nychka_2015,
   title={{A multiresolution Gaussian process model for the analysis of large spatial datasets}},
   author={Nychka, Douglas and Bandyopadhyay, Soutir and Hammerling, Dorit and Lindgren, Finn and Sain, Stephan},
