--- a/vignettes/FRK_intro.Rnw
+++ b/vignettes/FRK_intro.Rnw
@@ -229,17 +229,17 @@ Fixed Rank Kriging (FRK) is a spatial/spatio-temporal modelling and prediction f
 
 \section{Introduction}
 
-Fixed Rank Kriging (FRK) is a spatial/spatio-temporal modelling and prediction framework designed for use with large datasets. FRK hinges on the use of a Spatial Random Effects (SRE) model, in which a spatially correlated random spatial field is decomposed using a linear combination of basis functions with random coefficients. Dimensionality reduction ensures computationally efficient prediction, while the reconstructed random spatial field is, in general, non-stationary. For a detailed treatment of FRK, see \cite{Cressie_2008}.
+Fixed Rank Kriging (FRK) is a spatial/spatio-temporal modelling and prediction framework designed for use with large datasets. FRK hinges on the use of a Spatial Random Effects (SRE) model, in which a spatially correlated random spatial field is decomposed using a linear combination of basis functions with random coefficients. Dimensionality reduction ensures computationally efficient prediction, while the reconstructed random spatial field is, in general, non-stationary.  The SRE model has a spatial covariance functions that is \emph{always} nonnegative-definite, and, because any (possibly non-orthogonal) basis functions can be used, it can be constructed so as to approximate standard families of covariance functions.  For a detailed treatment of FRK, see \cite{Cressie_2008}.
 
 
 
-There are numerous R packages available for modelling and prediction with spatial or spatio-temporal data,\footnote{see \tt{https://cran.r-project.org/web/views/Spatial.html}.} although relatively few of these make use of a model with spatial basis functions. A few variants of FRK have, however, been developed to date and, of these, the package \tt{LatticeKrig} \citep{Nychka_2015} deserves special mention. \tt{LatticeKrig} uses Wendland basis functions (that have compact support) to decompose the spatially correlated field, and a Markov assumption to construct a precision matrix  (the matrix $\Kmat^{-1}$ in Section \ref{sec:SREModel}) to describe the dependence between the coefficients of these basis functions. The SRE model has a \red{spatial} covariance functions that is \emph{always} nonnegative-definite, and, because any (possibly non-orthogonal) basis functions can be used, it can be constructed so as to approximate standard families of covariance functions. \tt{LatticeKrig} does not cater for what we term fine-scale process variation, and the finest scale of the process is limited to the finest resolution of the basis functions used (which, however, can be relatively high due to the imposed sparsity). \tt{LatticeKrig}'s model is also restricted to use precision matrices constructed using Gaussian Markov random fields (GMRFs) -- this results in efficient computations and the potential use of a large number ($>4000$) basis functions, \red{but non-stationarity is limited in GMRFs} to a very small number of parameters: a spatially-varying variance component or to slowly varying length scales \citep[following the approach of ][]{Lindgren_2011}. \red{There is one final feature of \tt{LatticeKrig} that allows fast computation but results in an incoherent spatial model. The same random effect can be assigned to two spatial resolutions, where it is assumed statistically independent of itself \citep{Nychka_2015,Bradley_206}. This can only happen in the degenerate case where the random effect is in fact non-random.}
+There are numerous R packages available for modelling and prediction with spatial or spatio-temporal data,\footnote{see \tt{https://cran.r-project.org/web/views/Spatial.html}.} although relatively few of these make use of a model with spatial basis functions. A few variants of FRK have, however, been developed to date and, of these, the package \tt{LatticeKrig} \citep{Nychka_2015} deserves special mention. \tt{LatticeKrig} uses Wendland basis functions (that have compact support) to decompose the spatially correlated field, and a Markov assumption to construct a precision matrix  (the matrix $\Kmat^{-1}$ in Section \ref{sec:SREModel}) to describe the dependence between the coefficients of these basis functions. \tt{LatticeKrig} does not cater for what we term fine-scale process variation, and the finest scale of the process is limited to the finest resolution of the basis functions used (which, however, can be relatively high due to the imposed sparsity). \tt{LatticeKrig}'s model is also restricted to use precision matrices constructed using Gaussian Markov random fields (GMRFs) -- this results in efficient computations and the potential use of a large number ($>4000$) basis functions, but non-stationarity is limited in \tt{LatticeKrig's} GMRFs to either a few parameters that control spatially-varying variance or to some pre-specified specification \citep[][p.~21]{LatticeKrig}.  Heterogeneity is not straightforward in GMRFs, in general; for example inference on slowly varying length scales may be carried out using the approach of \citet{Lindgren_2011}. % \red{There is one final feature of \tt{LatticeKrig} that allows fast computation but results in an incoherent spatial model. The same random effect can be assigned to two spatial resolutions, where it is assumed statistically independent of itself \citep{Nychka_2015,Bradley_206}. This can only happen in the degenerate case where the random effect is in fact non-random.}
 
 In the standard flavour of \tt{FRK} \citep{Cressie_2008}, which we term \emph{vanilla} FRK, there is an explicit reliance on basis functions to give complex non-stationary patterns at the cost of not imposing a Markov random-field assumption. The number of basis functions in vanilla \tt{FRK} is thus bounded above by a couple of thousand and thus should be carefully chosen. This package is concerned with the vanilla approach to FRK in \tt{R}; some unpackaged MATLAB code is available at \tt{http://niasra.uow.edu.au/cei/webprojects/UOW175995.html}.
 
 Other general purpose packages, such as \tt{INLA}, also have the functionality that FRK requires. With \tt{INLA}, the basis functions are `tent' functions, and the distribution of the coefficients are assumed to be Gaussian with a sparse precision matrix, such that the covariance function of the resulting Gaussian field is approximately one from the Mat{\'e}rn class of spatial covariance functions \citep[see][for details on software implementation]{Lindgren_2015}. \tt{INLA}'s approach thus shares many of the advantages and limitations of \tt{LatticeKrig}. Vanilla FRK can also be implemented with \tt{INLA}; this would, however, require considerable extra implementation effort, especially if one is using spatio-temporal models. The advantage of \tt{INLA} is that once the basic model is constructed, one has access to all the approximate-inference machinery and likelihood models available within the package.
 
-The predictive process approach of \citet{Banerjee_2008} can also be seen as a type of Bayesian FRK, where the basis functions are constructed from the postulated covariance function of the spatial random effects and hence depend on parameters \citep[see][for an equivalence argument]{Katzfuss_2014}. An \tt{R} package that implements predictive processes is \tt{spBayes}. \tt{spBayes} allows for multivariate spatial or spatio-temporal fields, and both spatial/spatio-temporal processes  and Bayesian inference is carried out using Markov chain Monte Carlo (MCMC), allowing for a variety of likelihood models. Because basis functions are constructed based on a prespecified parametric covariance model, they change at each MCMC iteration \red{which results in some computational overhead}.
+The predictive process approach of \citet{Banerjee_2008} can also be seen as a type of Bayesian FRK, where the basis functions are constructed from the postulated covariance function of the spatial random effects and hence depend on parameters \citep[see][for an equivalence argument]{Katzfuss_2014}. An \tt{R} package that implements predictive processes is \tt{spBayes}. \tt{spBayes} allows for multivariate spatial or spatio-temporal fields, and both spatial/spatio-temporal processes  and Bayesian inference is carried out using Markov chain Monte Carlo (MCMC), allowing for a variety of likelihood models. Because basis functions are constructed based on a prespecified parametric covariance model, they change at each MCMC iteration which results in some computational overhead.
 
 The aim of the package \tt{FRK} is to considerably facilitate spatial and spatio-temporal analysis based on what, from experience, we deem to be the most `usual' scenario faced by the analyst in the environmental sciences:
 \begin{itemize}
@@ -281,7 +281,7 @@ where $\tvec(\svec)$ is a vector of spatially-referenced covariates, $\alphab$ a
 Y_i \equiv \frac{1}{|A_i|}\int_{A_i} Y(\svec) \intd \svec,
 \end{equation}
 
-\noindent and $N$ is the number of BAUs. At this BAU level, $Y_i = \tvec_i'\alphab + \upsilon_i + \delta_i$, where $\tvec_i \equiv \frac{1}{|A_i|}\int_{A_i} \tvec(\svec) \intd \svec$, and $\upsilon_i\equiv \frac{1}{|A_i|}\int_{A_i} \upsilon(\svec) \intd \svec$. In \tt{FRK}, we assume that the fine-scale variation is constant in each BAU, but uncorrelated across the BAUs. We thus model $\delta_i$ to be Gaussian with mean zero, and uncorrelated with variance
+\noindent and $N$ is the number of BAUs. At this BAU level, $Y_i = \tvec_i'\alphab + \upsilon_i + \delta_i$, where $\tvec_i \equiv \frac{1}{|A_i|}\int_{A_i} \tvec(\svec) \intd \svec$, and $\upsilon_i\equiv \frac{1}{|A_i|}\int_{A_i} \upsilon(\svec) \intd \svec$. In \tt{FRK}, we assume that the fine-scale variation is constant in each BAU (which should be very small), but uncorrelated across the BAUs. We thus model $\delta_i$ to be Gaussian with mean zero, and uncorrelated with variance
 \begin{equation}
 \var(\delta_i) = \sigma^2_\delta v_i,
 \end{equation}
@@ -291,7 +291,7 @@ where $\sigma^2_\delta$ is a parameter that needs to be estimated, $\vvec \equiv
 \end{equation}
 where $\Tmat \equiv (\tvec_i: i = 1,\dots,N)'$, $\upsilonb \equiv (\upsilon_i : i = 1,\dots,N)'$, $\deltab \equiv (\delta_i : i = 1,\dots,N)'$, and $\var(\deltab) \equiv \sigma^2_\delta \Vmat$, where $\Vmat \equiv \diag(\vvec)$ and known.
 
-We now  assume that the unobserved field, $Y(\svec)$, is observed with footprints spanning one or more BAUs. We thus define the observation domain as $D^O \subset 2^{D^L} / \varnothing$, where $2^{D^L}$ is the power set of $D^L$. For illustration, consider the simple case of three BAUs. Then $D^L = \{A_1,A_2,A_3\}$ and, for example, $D^O = \{\{A_1,A_2\},\{A_3\}\}$, in which case $B_1 = \{A_1,A_2\}$ and $B_2 = \{A_3\}$. Catering for different footprints is important for remote sensing applications in which satellite instrument footprints can widely differ \citep[e.g.][]{Zammit_2015}.
+We now  assume that the unobserved field, $Y(\svec)$, is observed with footprints spanning one or more BAUs. We thus define the observation domain as $D^O \subset 2^{D^L} / \varnothing$, where $2^{D^L}$ is the power set of $D^L$. For illustration, consider the simple case of three BAUs. Then $D^L = \{A_1,A_2,A_3\}$ and, for example, $D^O = \{\{A_1,A_2\},\{A_3\}\}$, in which case $B_1 = \{A_1,A_2\}$ and $B_2 = \{A_3\}$. Catering for different footprints is important for remote sensing applications in which satellite instrument footprints can widely differ \citep[e.g.,][]{Zammit_2015}.
 
 Each $B_i \in D^O$ is either a BAU (i.e., $|B_i| = 1$), or a set of BAUs, over which we have a noisy measurement $Z(B_i)$ (in which case $|B_i| > 1$). The measurement process is thus given by
 \begin{equation}
@@ -351,11 +351,12 @@ where
 \begin{equation} \label{eq:Omegab}
 \Omegab \equiv \Smat_Z \Sigmamat_\eta^{(i)} \Smat_Z' + \Smat_Z \muvec_\eta^{(i)}\muvec_\eta^{(i)'} \Smat_Z' - 2\Smat_Z\muvec_\eta^{(i)}(\Zvec - \Tmat_Z\alphab^{(i+1)})' + (\Zvec - \Tmat_Z\alphab^{(i+1)})(\Zmat - \Tmat_Z\alphab^{(i+1)})'.
 \end{equation}
-Since $\alphab^{(i+1)}$ and $\sigma^{2^{(i+1)}}_\delta$ are dependent, the updates \eqref{eq:alpha} and \eqref{eq:sigma2d} are iterated until convergence, where \eqref{eq:sigma2d}  can be solved using a standard root-finding algorithm. Simplifications are possible when $\Vmat_Z$ and $\Sigmamat_\epsilon$ are proportional to the identity matrix, with constants of proportionality $c_1$ and $c_2$, respectively. In this case
+
+\noindent The solution to \eqref{eq:sigma2d} is found using a standard root-finding algorithm after the expression for $\alphab^{(i+1)}$ is substituted into \eqref{eq:Omegab}. After $ \sigma^{2^{(i+1)}}$ is found, $\alphab^{(i+1)}$ is found from \eqref{eq:alpha}. Computational simplifications are possible when $\Vmat_Z$ and $\Sigmamat_\epsilon$ are diagonal (that is, when observations do not overlap spatially or spatio-temporally are are mutually uncorrelated) since in this case only the diagonal of $\Omegab$ needs to be computed. Further simplifications are possible when $\Vmat_Z$ and $\Sigmamat_\epsilon$ are proportional to the identity matrix, with constants of proportionality $c_1$ and $c_2$, respectively. In this case
 \begin{equation}
 \sigma^{2^{(i+1)}}_\delta = \frac{1}{c_1} \left(\frac{\tr(\Omegab)}{m} - c_2 \right),
 \end{equation}
-which reduces computational time. This simplification is used by $\texttt{FRK}$ when possible.
+and $\alphab^{(i+1)}$ is simply the ordinary least squares estimate given $\muvec_\eta^{(i)}$. These simplifications are used by $\texttt{FRK}$ when possible. To facilitate the computation, by default \tt{FRK} averages point-referenced observations that fall within the same BAU.
 
 Convergence of the EM algorithm is assessed using the (\emph{incomplete-data}) log-likelihood function at each iteration,
 \begin{equation}
@@ -517,7 +518,7 @@ S <- SRE(f = f,                # formula
 
 \noindent The function \tt{SRE} takes as arguments the formula, the data (as a list which can include additional datasets), the BAUs, the basis functions, a flag, \tt{est\_error}, and a flag \tt{average\_in\_BAU}. The flag \tt{est\_error} indicates whether we wish to attempt to estimate the measurement-error variance $\Sigmamat_\epsilon \equiv \sigma^2_\epsilon\Imat$ or not using variogram methods \citep{Kang_2009}. Currently, \tt{est\_error = T} is only allowed with spatial data. When not set, the data needs to also be supplied with a field \tt{std}, the standard deviation of the measurement error.
 
-Since multiple data points can fall into the same BAU, the matrix $\Vmat_Z$ is not diagonal, in general; this increases computational time considerably. For large point-referenced datasets, such as the \tt{AIRS} dataset considered in Section \ref{sec:AIRS}, one can use the argument \tt{average\_in\_BAU = TRUE} to indicate that one wishes to summarise the data at the BAU level. When this flag is set, all data falling into one BAU is averaged; the measurement error of the averaged data point is then taken to be the average measurement error of the individual data points. When set to \tt{TRUE}, the dataset is thinned; this can be used to obtain quick results prior to a more detailed analysis.
+Since multiple data points can fall into the same BAU, the matrix $\Vmat_Z$ is not diagonal, in general; this increases computational time considerably. For large point-referenced datasets, such as the \tt{AIRS} dataset considered in Section \ref{sec:AIRS}, one can use the argument \tt{average\_in\_BAU = TRUE} to indicate that one wishes to summarise the data at the BAU level. When this flag is set, all data falling into one BAU is averaged; the measurement error of the averaged data point is then taken to be the average measurement error of the individual data points (i.e., measurement error is assumed to be perfectly correlated within the BAU). When set to \tt{TRUE}, the dataset is thinned; this can be used to obtain quick results prior to a more detailed analysis.
 
 \vspace{0.1in}
 
@@ -1350,7 +1351,8 @@ From here on, the analysis proceeds in exactly the same way as shown in all the 
            data = list(sim_data),
            basis = G,
            BAUs = grid_BAUs,
-           est_error = FALSE)
+           est_error = FALSE,
+           average_in_BAU = FALSE)
 
    S <- SRE.fit(SRE_model = S,
                n_EM = 2,
