1. Added functionality for missing time points in data-BAU comparison 2. Updated vignette

--- a/vignettes/FRK_bib.bib
+++ b/vignettes/FRK_bib.bib
@@ -53,6 +53,16 @@ Davis T. , 2011. http://www.cise.ufl.edu/research/sparse/SuiteSparse, Online: La
   publisher={Elsevier}
 }
 
+@article{Nguyen_2014,
+  title={Spatio-temporal data fusion for very large remote sensing datasets},
+  author={Nguyen, Hai and Katzfuss, Matthias and Cressie, Noel and Braverman, Amy},
+  journal={Technometrics},
+  volume={56},
+  pages={174--185},
+  year={2014},
+  publisher={Taylor \& Francis}
+}
+
 @article{Lindgren_2011,
   title       = {An explicit link between {G}aussian fields and {Gaussian Markov random fields: {T}he stochastic partial} differential equation approach},
   author      = {Lindgren, F. and Rue, H. and Lindstr{\"o}m, J.},
